style: alignment and color fixes

--- a/botfront/imports/ui/components/nlu/activity/style.import.less
+++ b/botfront/imports/ui/components/nlu/activity/style.import.less
@@ -74,8 +74,8 @@
             border-bottom: 0;
         }
         .rt-td {
-          border-right: none !important;
-          white-space: normal;
+            border-right: none !important;
+            white-space: normal;
         }
     }
     .rt-thead.-header {
@@ -105,6 +105,10 @@
         padding-right: 50px !important;
         box-shadow: none !important;
         border-top: none !important;
+
+        input {
+            padding: 3px 7px !important;
+        }
     }
 }
 
